# FrothyRewrite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  compile_flags.txt  go.mod
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
base/: core.frothy
boards/arduino_uno/: board.h  board.mk  board_defs.c
boards/esp32_devkit_v1/: board.h  board.json  board.mk  board_defs.c
boards/host/: board.h  board.json  board.mk  board_defs.c
boards/seeed_xiao_esp32c6/: board.h  board.json  board.mk
boards/seeed_xiao_esp32s3/: board.h  board.json  board.mk  board_defs.c
cmd/frothy-session/: boards.go  bootstrap.go  bootstrap_test.go  build.go  build_test.go  capability.go  capability_test.go  compiler_process_unix.go  compiler_process_windows.go  connect.go  connect_cleanup.go  connect_cleanup_test.go  connect_controller_test.go  connect_history.go  connect_history_test.go  connect_input.go  connect_input_test.go  connect_pty_test.go  connect_pump.go  connect_pump_test.go  connect_reset.go  connect_reset_test.go  connect_test.go  connect_unix.go  connect_unix_test.go  connect_windows.go  deps.go  deps_test.go  editor_proof_test.go  fetch.go  fetch_test.go  generator.go  generator_test.go  help_test.go  include.go  include_test.go  init.go  init_test.go  install.go  install_test.go  (+21 more)
cmd/frothy-session/testdata/help/: bootstrap.txt  build.txt  connect.txt  doctor.txt  fetch.txt  flash.txt  init.txt  install.txt  menu.txt  send.txt  session.txt  stop.txt  wipe-user.txt  wipe.txt
docs/: week-1-exit-proof.input  week-1-exit-proof.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/media/walkthroughs/: connect.md  explore.md  (+3 more)
editors/vscode/src/: cli.ts  codelens.ts  commands.ts  completion.ts  connect.ts  diagnostics.ts  examples.generated.ts  extension.ts  forms.ts  output.ts  session-records.ts  status-bar.ts  terminal.ts  views.ts  words.ts
editors/vscode/syntaxes/: frothy-transcript.tmLanguage.json  frothy.tmLanguage.json
editors/vscode/test/: cli.test.ts  forms.test.ts  session-records.test.ts  words.test.ts
examples/: 01-hello.fr  02-words.fr  03-truthiness.fr  04-loops.fr  05-cells.fr  06-records.fr  07-attempt-rescue.fr  08-blink.fr  09-sensor.fr  10-events.fr  11-persistence.fr  12-i2c-trace.fr  13-ws2812-pulse.fr  README.md
internal/boardmanifest/: manifest_test.go
internal/testpty/: pty_cgo.go  pty_unsupported.go
libs/frothy-editor/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
libs/frothy-editor/fixtures/: project-document-v1.json
libs/frothy-editor/src/: editor.ts  forms.ts  highlight.ts  index.ts  project.ts  storage.ts  transcript.ts  types.d.ts  web-component.ts
libs/frothy-editor/test/: editor-documents.test.ts  examples-manifest.test.ts  forms.test.ts  highlight.test.ts  project.test.ts  storage.test.ts  transcript.test.ts
libs/frothy-repl/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
libs/frothy-repl/src/: browser.ts  connector.ts  fake.ts  index.ts  node-serial.ts  types.ts  web-serial.ts
libs/frothy-repl/test/: async-events.test.ts  crlf.test.ts  error.test.ts  hex.test.ts  lifecycle.test.ts  prompt.test.ts  source-form.test.ts  status.test.ts  transport-error.test.ts
packaging/homebrew/: frothy.rb.in
profiles/: esp32_plain.h  esp32_plain.sdkconfig.defaults  esp32_plain.sdkconfig.defaults.esp32  esp32_plain.sdkconfig.defaults.esp32c6  esp32_plain.sdkconfig.defaults.esp32s3  host.h  host_normal.h  host_small.h  tiny_328.h  tiny_328_tether_compiler.h  tiny_328_tether_compiler_host_names.h  tiny_328_tethered.h  tiny_328_tethered.mk  tiny_328_tethered_host_names.h  tiny_328_tethered_host_names.mk  tiny_328_tethered_host_names_persist.h  tiny_328_tethered_host_names_persist.mk  tiny_328_volatile.h
src/: base_defs.c  base_defs.h  base_image.c  base_image.h  code.c  code.h  compile.c  compile.h  config.h  crc.c  crc.h  event.c  event.h  froth.h  handle.c  handle.h  image.c  image.h  instruction.c  instruction.h  lib_native.c  lib_native.h  native.c  native.h  object.c  object.h  pad.c  pad.h  parse.c  parse.h  persist.c  persist.h  persist_format.c  persist_format.h  persist_payload.c  persist_payload.h  platform.h  profile.c  profile.h  repl.c  (+13 more)
targets/avr-libc/: platform.c  target.mk
targets/common/: repl_main.c  target_defs.c
targets/esp-idf/: CMakeLists.txt  ble.c  esp_platform.h  partitions.csv  platform.c  sdkconfig.defaults  target.mk
targets/esp-idf/main/: CMakeLists.txt  main.c
targets/host/: platform.c  target.mk
test/: fuzz_verify.c  test.c  test_ble.c  test_i2c_registers.c  test_lib_natives.c  test_persist_atomicity.c  test_persist_tier.c  test_t12_servo.c  test_t14_power.c  test_t15_net.c  test_t15b_tcp.c  test_t16_bytes.c  test_t21_mem.c
test/fixtures/test-mixed/: lib.fr  lib.toml
test/fixtures/test-pure/: helpers.fr  lib.fr
test/unity/: VERSION
tools/: build-editor-bundle.sh  build-flasher-bundle.sh  frothy-compile-overlay.c  gen-examples-manifest.mjs  gen-examples-manifest.test.mjs  release-name.sh  run-examples.sh  setup-esp-idf.sh
web/editor/: index.html  style.css
web/flash/: README.md  app.js  index.html  style.css
(+3 files in other folders)
