set(FR_GEN_DIR ${FR_REWRITE_ROOT}/build/${FR_REWRITE_BOARD}/gen)

# T12L: frothy build sets FROTHY_LIBS_CMAKE and FROTHY_LIB_NATIVES_C via
# idf.py -D flags. When set, include the generator's libs.cmake (which
# defines FROTHY_LIB_EXT_SOURCES + FROTHY_LIB_EXT_INCLUDE_DIRS) and add
# the generated lib_natives.c as a strong override of src/lib_native.c's
# weak fr_lib_natives defaults. When unset, no libraries — kernel uses
# the weak defaults.
set(FR_LIB_EXT_SOURCES)
set(FR_LIB_EXT_INCLUDE_DIRS)
set(FR_LIB_NATIVES_GEN_SOURCES)
if(FROTHY_LIBS_CMAKE AND EXISTS "${FROTHY_LIBS_CMAKE}")
    include("${FROTHY_LIBS_CMAKE}")
    set(FR_LIB_EXT_SOURCES ${FROTHY_LIB_EXT_SOURCES})
    set(FR_LIB_EXT_INCLUDE_DIRS ${FROTHY_LIB_EXT_INCLUDE_DIRS})
endif()
if(FROTHY_LIB_NATIVES_C AND EXISTS "${FROTHY_LIB_NATIVES_C}")
    set(FR_LIB_NATIVES_GEN_SOURCES ${FROTHY_LIB_NATIVES_C})
endif()

set(FR_KERNEL_SOURCES
    ${FR_REWRITE_ROOT}/src/tagged.c
    ${FR_REWRITE_ROOT}/src/types.c
    ${FR_REWRITE_ROOT}/src/crc.c
    ${FR_REWRITE_ROOT}/src/slot.c
    ${FR_REWRITE_ROOT}/src/profile.c
    ${FR_REWRITE_ROOT}/src/runtime.c
    ${FR_REWRITE_ROOT}/src/instruction.c
    ${FR_REWRITE_ROOT}/src/code.c
    ${FR_REWRITE_ROOT}/src/native.c
    ${FR_REWRITE_ROOT}/src/lib_native.c
    ${FR_REWRITE_ROOT}/src/handle.c
    ${FR_REWRITE_ROOT}/src/pad.c
    ${FR_REWRITE_ROOT}/src/object.c
    ${FR_REWRITE_ROOT}/src/image.c
    ${FR_REWRITE_ROOT}/src/base_defs.c
    ${FR_REWRITE_ROOT}/src/base_image.c
    ${FR_REWRITE_ROOT}/src/event.c
    ${FR_REWRITE_ROOT}/src/vm.c
    ${FR_REWRITE_ROOT}/src/parse.c
    ${FR_REWRITE_ROOT}/src/compile.c
    ${FR_REWRITE_ROOT}/src/repl.c
    ${FR_REWRITE_ROOT}/src/source_render.c
    ${FR_REWRITE_ROOT}/src/persist_format.c
    ${FR_REWRITE_ROOT}/src/persist.c
    ${FR_REWRITE_ROOT}/src/persist_payload.c
    ${FR_GEN_DIR}/fr_source_base.c)

idf_component_register(
    SRCS
        main.c
        ${FR_KERNEL_SOURCES}
        ${FR_LIB_NATIVES_GEN_SOURCES}
        ${FR_LIB_EXT_SOURCES}
        ${FR_REWRITE_ROOT}/targets/common/target_defs.c
        ${FR_REWRITE_ROOT}/targets/esp-idf/ble.c
        ${FR_REWRITE_ROOT}/targets/esp-idf/platform.c
        ${FR_REWRITE_ROOT}/boards/${FR_REWRITE_BOARD}/board_defs.c
    INCLUDE_DIRS
        ${FR_REWRITE_ROOT}/src
        ${FR_REWRITE_ROOT}/profiles
        ${FR_REWRITE_ROOT}/targets/esp-idf
        ${FR_REWRITE_ROOT}/boards/${FR_REWRITE_BOARD}
        ${FR_GEN_DIR}
        ${FR_LIB_EXT_INCLUDE_DIRS}
    REQUIRES
        bt
        driver
        esp_adc
        esp_event
        esp_http_client
        esp_netif
        esp_timer
        esp_wifi
        nvs_flash)

target_compile_definitions(${COMPONENT_LIB} PRIVATE
    FR_PROFILE_HEADER="${FR_REWRITE_PROFILE}.h"
    FR_PROFILE_NAME="${FR_REWRITE_PROFILE}")

# A composition header, when frothy build supplies one, is included before the
# profile by config.h and overrides its gate defaults. Empty means unset, so
# config.h never sees #include "".
set(FR_COMPOSITION_H "" CACHE FILEPATH
    "Frothy composition header (generated by frothy build)")
if(FR_COMPOSITION_H)
    target_compile_definitions(${COMPONENT_LIB} PRIVATE
        FR_COMPOSITION_HEADER="${FR_COMPOSITION_H}")
endif()

# T12L: suppress lib_native.c's empty defaults when the generator emitted
# strong overrides (see src/lib_native.c FR_LIB_NATIVES_PROVIDED comment).
if(FR_LIB_NATIVES_GEN_SOURCES)
    target_compile_definitions(${COMPONENT_LIB} PRIVATE FR_LIB_NATIVES_PROVIDED)
endif()

target_compile_options(${COMPONENT_LIB} PRIVATE
    -std=gnu17
    -Wall
    -Wextra
    -Werror
    -Wno-error=missing-field-initializers)
